--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand navbar-left" href="index.html">Heroes Desk</a>
+                <a class="navbar-brand navbar-left" href="index.html">Heroes Desk</a><p class="navbar-text visible-xs-block">Desk (todo wire through React)</p>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-left">
