--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,7 @@
                         <input type="text" class="form-control" placeholder="Search">
                     </div>
                     <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
-                </form>                
+                </form>
 
 
 
@@ -55,9 +55,7 @@
 </header>
 <main role="main">
     <div id="app">
-        <h2>In progress</h2>
-        <h2>To qualify</h2>
-        <h2>To do</h2>
+
     </div>
 </main>
 <footer role="contentinfo">
@@ -65,6 +63,6 @@
         <small>TODO Copyright &copy; rese</small>
     </p>
 </footer>
-<script src="js/main.js"></script>
+<script src="dist/bundle.js"></script>
 </body>
 </html>
