--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,60 +10,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<header role="banner">
-    <nav role="navigation" class="navbar navbar-static-top navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand navbar-left" href="index.html">Heroes Desk</a><p class="navbar-text visible-xs-block">Desk (todo wire through React)</p>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-left">
-                    <li class="active"><a href="index.html">Desk</a></li>
-                    <li><a href="#">Search</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Activity</a></li>
-                </ul>
-
-                  <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">HerosName<span class="caret"></span></a>
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Account</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Logout</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-
-                <form class="navbar-form navbar-right" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
-                </form>
-
-
-
-            </div>
-
-        </div>
-    </nav>
-</header>
-<main role="main">
-    <div id="app">
-
-    </div>
-</main>
-<footer role="contentinfo">
-    <p>
-        <small>TODO Copyright &copy; rese</small>
-    </p>
-</footer>
+<div id="app"></div>
 <script src="dist/bundle.js"></script>
 </body>
 </html>
