--- a/www/index.html
+++ b/www/index.html
@@ -7,10 +7,10 @@
     <meta name="description" content="Helping heroes helping out.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 <div id="app"></div>
-<script src="dist/bundle.js"></script>
+<script src="bundle.js"></script>
 </body>
 </html>
